--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
         "mongoose": "^8.14.2",
         "morgan": "^1.9.1",
         "node-cron": "^4.0.0",
+        "puppeteer": "^24.8.2",
         "rotating-file-stream": "^1.4.6"
     }
 }
