--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
     "main": "src/server.js",
     "scripts": {
         "setup": "npm install && npm update",
-        "start": "node src/server.js"
+        "start": "node src/server.js",
+        "build": "babel src -d dist"
     },
     "keywords": [
         "express",
@@ -16,6 +17,7 @@
     "license": "UNLICENSED",
     "dependencies": {
         "axios": "^1.9.0",
+        "babel": "^5.8.38",
         "body-parser": "^2.2.0",
         "cheerio": "^1.0.0",
         "cookie-parser": "^1.4.4",
